--- a/web/package.json
+++ b/web/package.json
@@ -33,6 +33,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.22",
     "geist": "^1.5.1",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
