--- a/api/.env.example
+++ b/api/.env.example
@@ -1,15 +1,19 @@
 NODE_ENV=production
 PORT=5575
 HOST=0.0.0.0
-API_PREFIX=/
+API_PREFIX=
 
 DOCKER_SOCKET_PATH=/var/run/docker.sock
 DOCKER_NETWORK=minecraft-network
 
 DATABASE_URL=./data/servers.db
 
+API_URL=http://localhost:5575
+
+SENDER_EMAIL=
+MAILERSEND_API_KEY=
+
 JWT_SECRET=your-super-secure-jwt-secret-change-in-production
-BCRYPT_ROUNDS=12
 CORS_ORIGIN=http://localhost:3000
 
 RATE_LIMIT_MAX=100
