--- a/api/package.json
+++ b/api/package.json
@@ -11,9 +11,10 @@
   "devDependencies": {
     "@sinclair/typebox": "^0.34.41",
     "@types/bun": "latest",
+    "@types/dockerode": "^3.3.44",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/speakeasy": "^2.0.10",
-    "@types/dockerode": "^3.3.44"
+    "@types/socket.io": "^3.0.2",
+    "@types/speakeasy": "^2.0.10"
   },
   "peerDependencies": {
     "typescript": "^5"
@@ -22,7 +23,9 @@
     "@fastify/cors": "^11.1.0",
     "@fastify/helmet": "^13.0.1",
     "@fastify/rate-limit": "^10.3.0",
+    "@fastify/swagger": "^9.5.2",
     "@fastify/type-provider-typebox": "^6.0.0",
+    "@fastify/websocket": "^11.2.0",
     "bcryptjs": "^3.0.2",
     "cross-env": "^10.0.0",
     "dockerode": "^4.0.8",
@@ -31,10 +34,14 @@
     "fastify-jwt": "^4.2.0",
     "fastify-plugin": "^5.0.1",
     "jsonwebtoken": "^9.0.2",
+    "mailersend": "^2.6.0",
     "pino-pretty": "^13.1.1",
+    "socket.io": "^4.8.1",
     "speakeasy": "^2.0.0",
+    "ua-parser-js": "^2.0.5",
     "uuid": "^13.0.0",
     "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0",
     "zod": "^4.1.11"
   }
 }
